--- a/browser/devtools/framework/toolbox.css
+++ b/browser/devtools/framework/toolbox.css
@@ -10,31 +10,25 @@
   background-repeat: no-repeat;
   width: 22px;
   height: 22px;
-  border-radius: @toolbarbuttonCornerRadius@;
   border: 0;
 }
 
-.toolbox-dock-button[checked] {
-  background-color: black;
-}
-
-.toolbox-dock-button:hover {
-  background-color: black;
-}
-
 .toolbox-dock-button:active {
-  background-color: black;
   transform: translateY(1px);
 }
 
+.toolbox-dock-button[checked] {
+  background-color: transparent;
+}
+
 #toolbox-dock-bottom {
-  background-image: url("chrome://browser/skin/devtools/dock-bottom.svg");
+  background-image: url("chrome://browser/skin/devtools/dock-bottom.png");
 }
 
 #toolbox-dock-right {
-  background-image: url("chrome://browser/skin/devtools/dock-right.svg");
+  background-image: url("chrome://browser/skin/devtools/dock-side.png");
 }
 
 #toolbox-dock-window {
-  background-image: url("chrome://browser/skin/devtools/dock-window.svg");
+  background-image: url("chrome://browser/skin/devtools/dock-window.png");
 }
