change code references of 'right' to 'side' for rtl l10n

--- a/browser/devtools/framework/toolbox.css
+++ b/browser/devtools/framework/toolbox.css
@@ -25,7 +25,7 @@
   background-image: url("chrome://browser/skin/devtools/dock-bottom.png");
 }
 
-#toolbox-dock-right {
+#toolbox-dock-side {
   background-image: url("chrome://browser/skin/devtools/dock-side.png");
 }
 
